# IOMessage

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  NetworkManager.h  build_client_win.bat  utils.h
client/src/: main.c  utils.c
client/src/win/: NetworkManager_win_imp.c
server/: CMakeLists.txt  CommunicationManager.h  ThreadManager.h  arena.h  build_server_win.bat  config.txt  request.h  response.h  shared_queue.h  utils.h
server/src/: CommunicationManager.c  arena.c  main.c  request.c  response.c  shared_queue.c  utils.c
server/src/win/: NetworkManager_win_imp.c  ThreadManager_win_imp.c
